[project]
name = "comfyui_lg_samplingutils"
description = "This is a toolset designed for ComfyUI by LAOGOU-666, providing a series of practical sampling nodes, making our operation more intuitive and convenient"
version = "1.0.1"
license = { text = "LICENSE.txt" }
dependencies = [""]

[project.urls]
Repository = "https://github.com/LAOGOU-666/ComfyUI-LG_SamplingUtils"

[tool.comfy]
PublisherId = "laogou666" 
DisplayName = "ComfyUI-LG_SamplingUtils"
Icon = ""
